--- a/agentic_design/01_prompt_chaining.ipynb
+++ b/agentic_design/01_prompt_chaining.ipynb
@@ -18,11 +18,10 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001B[43mNote: you may need to restart the kernel using %restart_python or dbutils.library.restartPython() to use updated packages.\u001B[0m\n"
+      "\u001b[43mNote: you may need to restart the kernel using %restart_python or dbutils.library.restartPython() to use updated packages.\u001b[0m\n"
      ]
     }
    ],
@@ -134,11 +133,30 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n--- Final JSON Output ---\nHere is the JSON object based on the provided specifications:\n\n```json\n{\n  \"cpu\": {\n    \"type\": \"Octa-core\",\n    \"clock_speed\": \"3.5 GHz\"\n  },\n  \"memory\": {\n    \"ram\": \"16GB\"\n  },\n  \"storage\": {\n    \"type\": \"NVMe SSD\",\n    \"capacity\": \"1TB\"\n  }\n}\n```\n\nNote that I've used camelCase for the keys, which is a common convention in JSON. If you'd like to use underscores instead (e.g. `ram` becomes `ram`), I can modify the response accordingly. Let me know!\n"
+      "\n",
+      "--- Final JSON Output ---\n",
+      "Here is the JSON object based on the provided specifications:\n",
+      "\n",
+      "```json\n",
+      "{\n",
+      "  \"cpu\": {\n",
+      "    \"type\": \"Octa-core\",\n",
+      "    \"clock_speed\": \"3.5 GHz\"\n",
+      "  },\n",
+      "  \"memory\": {\n",
+      "    \"ram\": \"16GB\"\n",
+      "  },\n",
+      "  \"storage\": {\n",
+      "    \"type\": \"NVMe SSD\",\n",
+      "    \"capacity\": \"1TB\"\n",
+      "  }\n",
+      "}\n",
+      "```\n",
+      "\n",
+      "Note that I've used camelCase for the keys, which is a common convention in JSON. If you'd like to use underscores instead (e.g. `ram` becomes `ram`), I can modify the response accordingly. Let me know!\n"
      ]
     }
    ],
@@ -327,11 +345,23 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- Running with a booking request ---\n\n--- DELEGATING TO BOOKING HANDLER ---\nBooking Handler processed request: 'Book me a flight to London.'. Result: Simulated booking action.\n\n--- Running with an info request ---\n\n--- DELEGATING TO INFO HANDLER ---\nInfo Handler processed request: 'What is the capital of Italy?'. Result: Simulated information retrieval.\n\n--- Running with an unclear request ---\n\n--- DELEGATING TO INFO HANDLER ---\nInfo Handler processed request: 'Tell me about quantum physics.'. Result: Simulated information retrieval.\n"
+      "--- Running with a booking request ---\n",
+      "\n",
+      "--- DELEGATING TO BOOKING HANDLER ---\n",
+      "Booking Handler processed request: 'Book me a flight to London.'. Result: Simulated booking action.\n",
+      "\n",
+      "--- Running with an info request ---\n",
+      "\n",
+      "--- DELEGATING TO INFO HANDLER ---\n",
+      "Info Handler processed request: 'What is the capital of Italy?'. Result: Simulated information retrieval.\n",
+      "\n",
+      "--- Running with an unclear request ---\n",
+      "\n",
+      "--- DELEGATING TO INFO HANDLER ---\n",
+      "Info Handler processed request: 'Tell me about quantum physics.'. Result: Simulated information retrieval.\n"
      ]
     }
    ],
@@ -522,45 +552,74 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n--- Running Parallel LangChain Example for Topic: 'The history of space exploration' ---\n"
+      "\n",
+      "--- Running Parallel LangChain Example for Topic: 'The history of space exploration' ---\n"
      ]
     },
     {
-     "output_type": "stream",
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/usr/lib/python3.11/ast.py:50: RuntimeWarning: coroutine 'run_parallel_example' was never awaited\n  return compile(source, filename, mode, flags,\nRuntimeWarning: Enable tracemalloc to get the object allocation traceback\n"
+      "/usr/lib/python3.11/ast.py:50: RuntimeWarning: coroutine 'run_parallel_example' was never awaited\n",
+      "  return compile(source, filename, mode, flags,\n",
+      "RuntimeWarning: Enable tracemalloc to get the object allocation traceback\n"
      ]
     },
     {
-     "output_type": "stream",
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n--- Final Response ---\nThe history of space exploration is a rich and fascinating story that spans over six decades, from the early years of the 1950s to the present day. It is a story of human ingenuity, technological advancements, and the unwavering desire to explore the unknown.\n\n**Early Years (1950s-1960s)**\n\nThe early years of space exploration were marked by a series of significant milestones achieved by the Soviet Union and the United States. In 1957, the Soviet Union launched Sputnik 1, the first artificial satellite, into space, followed by the launch of Laika, the first living creature, into space in 1957. The United States responded by launching Explorer 1, the first successful American satellite, in 1958. The Soviet Union continued to push the boundaries of space exploration, sending Yuri Gagarin, the first human, into space in 1961, followed by Alan Shepard, the first American, in 1961.\n\n**Moon Landings (1960s-1970s)**\n\nThe 1960s and 1970s saw the Soviet Union's Luna program land several robotic spacecraft on the Moon, while the United States' Apollo program landed astronauts on the Moon in 1969, with Neil Armstrong and Edwin \"Buzz\" Aldrin becoming the first humans to set foot on the lunar surface. The Apollo program conducted several more lunar missions, including the first lunar rover and the first lunar sample return.\n\n**Space Stations and Robotic Exploration (1970s-1990s)**\n\nThe 1970s and 1980s saw the launch of the first space stations, including the Soviet Union's Salyut 1 in 1971 and the United States' Skylab in 1973. The Soviet Union's Venera program sent several robotic spacecraft to Venus, while the United States' Voyager program sent two spacecraft to the outer planets. These missions marked significant milestones in the exploration of our solar system.\n\n**International Cooperation and Modern Era (1990s-present)**\n\nThe 1990s saw a shift towards international cooperation in space exploration, with the Soviet Union and the United States collaborating on the International Space Station (ISS) program. China launched its first spacecraft, Shenzhou 1, in 2003, marking the beginning of a new era in Chinese space exploration. Private companies, such as SpaceX and Blue Origin, have also begun to play a major role in space exploration, with NASA's Artemis program aiming to return humans to the Moon by 2024 and establish a sustainable presence on the lunar surface.\n\n**Key Milestones**\n\nSome of the key milestones in the history of space exploration include:\n\n* Sputnik 1, the first artificial satellite, launched by the Soviet Union in 1957\n* Laika, the first living creature, launched by the Soviet Union in 1957\n* Yuri Gagarin, the first human, launched by the Soviet Union in 1961\n* Neil Armstrong and Edwin \"Buzz\" Aldrin, the first humans to set foot on the Moon, in 1969\n* Salyut 1, the first space station, launched by the Soviet Union in 1971\n* Voyager 1 and 2, the first spacecraft to visit the outer planets, launched by the United States in 1977\n* International Space Station (ISS), launched in 1998, marking a new era in international cooperation in space exploration\n\n**Key Players**\n\nSome of the key players in the history of space exploration include:\n\n* Soviet Union: Yuri Gagarin, Alexei Leonov, and Sergei Korolev\n* United States: Alan Shepard, Neil Armstrong, and Edwin \"Buzz\" Aldrin\n* China: Yang Liwei and Fei Junlong\n* Private companies: Elon Musk (SpaceX) and Jeff Bezos (Blue Origin)\n\n**Conclusion**\n\nThe history of space exploration is a rich and fascinating story that spans over six decades. From the early years of the 1950s to the present day, space exploration has been marked by significant milestones, technological advancements, and the unwavering desire to explore the unknown. As we look to the future, it is clear that space exploration will continue to play a major role in shaping our understanding of the universe and our place within it.\n"
+      "\n",
+      "--- Final Response ---\n",
+      "The history of space exploration is a rich and fascinating story that spans over six decades, from the early years of the 1950s to the present day. It is a story of human ingenuity, technological advancements, and the unwavering desire to explore the unknown.\n",
+      "\n",
+      "**Early Years (1950s-1960s)**\n",
+      "\n",
+      "The early years of space exploration were marked by a series of significant milestones achieved by the Soviet Union and the United States. In 1957, the Soviet Union launched Sputnik 1, the first artificial satellite, into space, followed by the launch of Laika, the first living creature, into space in 1957. The United States responded by launching Explorer 1, the first successful American satellite, in 1958. The Soviet Union continued to push the boundaries of space exploration, sending Yuri Gagarin, the first human, into space in 1961, followed by Alan Shepard, the first American, in 1961.\n",
+      "\n",
+      "**Moon Landings (1960s-1970s)**\n",
+      "\n",
+      "The 1960s and 1970s saw the Soviet Union's Luna program land several robotic spacecraft on the Moon, while the United States' Apollo program landed astronauts on the Moon in 1969, with Neil Armstrong and Edwin \"Buzz\" Aldrin becoming the first humans to set foot on the lunar surface. The Apollo program conducted several more lunar missions, including the first lunar rover and the first lunar sample return.\n",
+      "\n",
+      "**Space Stations and Robotic Exploration (1970s-1990s)**\n",
+      "\n",
+      "The 1970s and 1980s saw the launch of the first space stations, including the Soviet Union's Salyut 1 in 1971 and the United States' Skylab in 1973. The Soviet Union's Venera program sent several robotic spacecraft to Venus, while the United States' Voyager program sent two spacecraft to the outer planets. These missions marked significant milestones in the exploration of our solar system.\n",
+      "\n",
+      "**International Cooperation and Modern Era (1990s-present)**\n",
+      "\n",
+      "The 1990s saw a shift towards international cooperation in space exploration, with the Soviet Union and the United States collaborating on the International Space Station (ISS) program. China launched its first spacecraft, Shenzhou 1, in 2003, marking the beginning of a new era in Chinese space exploration. Private companies, such as SpaceX and Blue Origin, have also begun to play a major role in space exploration, with NASA's Artemis program aiming to return humans to the Moon by 2024 and establish a sustainable presence on the lunar surface.\n",
+      "\n",
+      "**Key Milestones**\n",
+      "\n",
+      "Some of the key milestones in the history of space exploration include:\n",
+      "\n",
+      "* Sputnik 1, the first artificial satellite, launched by the Soviet Union in 1957\n",
+      "* Laika, the first living creature, launched by the Soviet Union in 1957\n",
+      "* Yuri Gagarin, the first human, launched by the Soviet Union in 1961\n",
+      "* Neil Armstrong and Edwin \"Buzz\" Aldrin, the first humans to set foot on the Moon, in 1969\n",
+      "* Salyut 1, the first space station, launched by the Soviet Union in 1971\n",
+      "* Voyager 1 and 2, the first spacecraft to visit the outer planets, launched by the United States in 1977\n",
+      "* International Space Station (ISS), launched in 1998, marking a new era in international cooperation in space exploration\n",
+      "\n",
+      "**Key Players**\n",
+      "\n",
+      "Some of the key players in the history of space exploration include:\n",
+      "\n",
+      "* Soviet Union: Yuri Gagarin, Alexei Leonov, and Sergei Korolev\n",
+      "* United States: Alan Shepard, Neil Armstrong, and Edwin \"Buzz\" Aldrin\n",
+      "* China: Yang Liwei and Fei Junlong\n",
+      "* Private companies: Elon Musk (SpaceX) and Jeff Bezos (Blue Origin)\n",
+      "\n",
+      "**Conclusion**\n",
+      "\n",
+      "The history of space exploration is a rich and fascinating story that spans over six decades. From the early years of the 1950s to the present day, space exploration has been marked by significant milestones, technological advancements, and the unwavering desire to explore the unknown. As we look to the future, it is clear that space exploration will continue to play a major role in shaping our understanding of the universe and our place within it.\n"
      ]
     }
    ],
    "source": [
-    "# --- Run the Chain ---\n",
-    "async def run_parallel_example(topic: str) -> None:\n",
-    "    if not llm:\n",
-    "        print(\"LLM not initialized. Cannot run example.\")\n",
-    "        return\n",
-    "\n",
-    "    print(f\"\\n--- Running Parallel LangChain Example for Topic: '{topic}' ---\")\n",
-    "    try:\n",
-    "        response = await full_parallel_chain.ainvoke(topic)  # pass a single string\n",
-    "        print(\"\\n--- Final Response ---\")\n",
-    "        print(response)\n",
-    "    except Exception as e:\n",
-    "        print(f\"\\nAn error occurred during chain execution: {e}\")\n",
-    "\n",
     "# Directly await the coroutine in notebook cell (Databricks supports top-level await)\n",
     "test_topic = \"The history of space exploration\"\n",
     "await run_parallel_example(test_topic)"
