Update multi-agent notebook

--- a/agentic_design/03_multi-agents.ipynb
+++ b/agentic_design/03_multi-agents.ipynb
@@ -16,7 +16,16 @@
      "title": ""
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001B[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\ngoogle-api-core 2.18.0 requires protobuf!=3.20.0,!=3.20.1,!=4.21.0,!=4.21.1,!=4.21.2,!=4.21.3,!=4.21.4,!=4.21.5,<5.0.0.dev0,>=3.19.5, but you have protobuf 5.29.5 which is incompatible.\u001B[0m\u001B[31m\n\u001B[0m\u001B[43mNote: you may need to restart the kernel using %restart_python or dbutils.library.restartPython() to use updated packages.\u001B[0m\n"
+     ]
+    }
+   ],
    "source": [
     "%pip install -U -q databricks-langchain langchain==0.3.7 faiss-cpu wikipedia langgraph==0.5.3  databricks_langchain"
    ]
@@ -270,7 +279,16 @@
      "title": ""
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n================ RESEARCH ================\n\nBased on industry reports, research studies, and expert opinions, here are the top 3 emerging trends in Artificial Intelligence (AI) for 2024-2025, along with their practical applications and potential impact:\n\n**Trend 1: Explainable AI (XAI) and Transparency**\n\nExplainable AI (XAI) is a growing trend that focuses on making AI models more transparent and interpretable. This trend aims to address the lack of trust in AI decision-making processes, particularly in high-stakes applications like healthcare, finance, and law enforcement.\n\nPractical Applications:\n\n* **Medical Diagnosis**: XAI can help doctors understand how AI-powered diagnostic tools arrive at their conclusions, enabling more accurate and transparent diagnosis.\n* **Financial Risk Assessment**: XAI can provide insights into how AI-driven risk assessment models make decisions, reducing the risk of biased or unfair lending practices.\n\nPotential Impact:\n\n* Increased trust in AI decision-making processes\n* Improved accountability and transparency in AI-driven applications\n* Enhanced collaboration between humans and AI systems\n\nSources:\n\n* \"Explainable AI: A Survey\" by the Association for the Advancement of Artificial Intelligence (AAAI) [1]\n* \"Explainable AI for Healthcare\" by the National Institutes of Health (NIH) [2]\n\n**Trend 2: Edge AI and IoT**\n\nEdge AI refers to the processing of AI workloads at the edge of the network, closer to the source of the data. This trend is driven by the increasing number of Internet of Things (IoT) devices and the need for real-time processing and decision-making.\n\nPractical Applications:\n\n* **Smart Cities**: Edge AI can enable real-time traffic management, energy optimization, and public safety monitoring in smart cities.\n* **Industrial Automation**: Edge AI can improve manufacturing efficiency, quality control, and predictive maintenance in industrial settings.\n\nPotential Impact:\n\n* Reduced latency and improved real-time decision-making\n* Increased efficiency and productivity in various industries\n* Enhanced security and reduced data transmission costs\n\nSources:\n\n* \"Edge AI: A New Paradigm for AI\" by the IEEE Computer Society [3]\n* \"Edge AI for IoT\" by the International Journal of Advanced Research in Computer Science (IJARCS) [4]\n\n**Trend 3: Human-AI Collaboration and Hybrid Intelligence**\n\nHuman-AI collaboration involves designing AI systems that work alongside humans to augment their capabilities and improve decision-making. This trend is driven by the recognition that AI is not a replacement for human intelligence, but rather a complement to it.\n\nPractical Applications:\n\n* **Creative Industries**: Human-AI collaboration can enable the creation of new art forms, music, and literature that combine human creativity with AI-generated ideas.\n* **Business Decision-Making**: Human-AI collaboration can provide business leaders with data-driven insights and recommendations that inform strategic decision-making.\n\nPotential Impact:\n\n* Improved productivity and efficiency in various industries\n* Enhanced creativity and innovation through human-AI collaboration\n* Increased trust and acceptance of AI in various applications\n\nSources:\n\n* \"Human-AI Collaboration: A New Frontier\" by the Harvard Business Review [5]\n* \"Hybrid Intelligence: A New Paradigm for AI\" by the MIT Technology Review [6]\n\nReferences:\n\n[1] AAAI. (2020). Explainable AI: A Survey. Association for the Advancement of Artificial Intelligence.\n\n[2] NIH. (2020). Explainable AI for Healthcare. National Institutes of Health.\n\n[3] IEEE Computer Society. (2020). Edge AI: A New Paradigm for AI. IEEE Computer Society.\n\n[4] IJARCS. (2020). Edge AI for IoT. International Journal of Advanced Research in Computer Science.\n\n[5] Harvard Business Review. (2020). Human-AI Collaboration: A New Frontier. Harvard Business Review.\n\n[6] MIT Technology Review. (2020). Hybrid Intelligence: A New Paradigm for AI. MIT Technology Review.\n\n================ BLOG POST ================\n\n**The Future of Artificial Intelligence: Top 3 Emerging Trends in 2024-2025**\n\nArtificial Intelligence (AI) has been transforming industries and revolutionizing the way we live and work. As we step into 2024-2025, the AI landscape is expected to undergo significant changes, driven by advancements in technology, shifting business needs, and evolving societal expectations. In this blog post, we'll explore the top 3 emerging trends in AI that will shape the future of technology and its applications.\n\n**Trend 1: Explainable AI (XAI) and Transparency**\n\nOne of the most significant concerns surrounding AI is the lack of transparency and accountability in its decision-making processes. This is where Explainable AI (XAI) comes in – a trend that focuses on making AI models more interpretable and transparent. XAI aims to address the trust deficit in AI-driven applications, particularly in high-stakes domains like healthcare, finance, and law enforcement.\n\nBy using XAI, medical professionals can understand how AI-powered diagnostic tools arrive at their conclusions, leading to more accurate and transparent diagnosis. Similarly, in finance, XAI can provide insights into how AI-driven risk assessment models make decisions, reducing the risk of biased or unfair lending practices.\n\nThe potential impact of XAI is substantial:\n\n* Increased trust in AI decision-making processes\n* Improved accountability and transparency in AI-driven applications\n* Enhanced collaboration between humans and AI systems\n\n**Trend 2: Edge AI and IoT**\n\nAs the number of Internet of Things (IoT) devices continues to grow, the need for real-time processing and decision-making becomes increasingly important. Edge AI, which involves processing AI workloads at the edge of the network, is poised to revolutionize various industries.\n\nEdge AI can enable real-time traffic management, energy optimization, and public safety monitoring in smart cities. In industrial settings, Edge AI can improve manufacturing efficiency, quality control, and predictive maintenance. By processing data closer to the source, Edge AI reduces latency, improves efficiency, and enhances security.\n\nThe potential impact of Edge AI is significant:\n\n* Reduced latency and improved real-time decision-making\n* Increased efficiency and productivity in various industries\n* Enhanced security and reduced data transmission costs\n\n**Trend 3: Human-AI Collaboration and Hybrid Intelligence**\n\nThe idea of AI replacing human intelligence is a myth. In reality, AI is a complement to human capabilities, and the future of AI lies in human-AI collaboration. This trend involves designing AI systems that work alongside humans to augment their capabilities and improve decision-making.\n\nHuman-AI collaboration can enable the creation of new art forms, music, and literature that combine human creativity with AI-generated ideas. In business, human-AI collaboration can provide leaders with data-driven insights and recommendations that inform strategic decision-making.\n\nThe potential impact of human-AI collaboration is substantial:\n\n* Improved productivity and efficiency in various industries\n* Enhanced creativity and innovation through human-AI collaboration\n* Increased trust and acceptance of AI in various applications\n\nIn conclusion, the top 3 emerging trends in AI for 2024-2025 – Explainable AI, Edge AI, and Human-AI Collaboration – will shape the future of technology and its applications. As these trends continue to evolve, we can expect significant advancements in various industries, from healthcare and finance to manufacturing and creative fields.\n\nBy embracing these trends, businesses and organizations can unlock new opportunities, improve decision-making, and drive innovation. As we look to the future, one thing is clear: AI is no longer a novelty, but a fundamental part of our technological landscape.\n\nStay ahead of the curve by staying informed about the latest developments in AI. Follow us for more insights and updates on the future of Artificial Intelligence.\n"
+     ]
+    }
+   ],
    "source": [
     "app = build_graph()\n",
     "\n",
@@ -560,7 +578,16 @@
      "title": ""
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Assistant: Hi Ling. What can I help you with?\nAssistant: You prefer short answers.\n"
+     ]
+    }
+   ],
    "source": [
     "app = build_graph()\n",
     "state: AgentState = {\n",
