Update MCP Notebook

--- a/agentic_design/04_mcp.ipynb
+++ b/agentic_design/04_mcp.ipynb
@@ -16,7 +16,16 @@
      "title": ""
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001B[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\ngoogle-api-core 2.18.0 requires protobuf!=3.20.0,!=3.20.1,!=4.21.0,!=4.21.1,!=4.21.2,!=4.21.3,!=4.21.4,!=4.21.5,<5.0.0.dev0,>=3.19.5, but you have protobuf 5.29.5 which is incompatible.\u001B[0m\u001B[31m\n\u001B[0m\u001B[43mNote: you may need to restart the kernel using %restart_python or dbutils.library.restartPython() to use updated packages.\u001B[0m\n"
+     ]
+    }
+   ],
    "source": [
     "%pip install -U -q databricks-langchain langchain==0.3.7 faiss-cpu wikipedia langgraph==0.5.3  databricks_langchain mcp"
    ]
@@ -74,7 +83,16 @@
      "title": ""
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wrote: /tmp/mcp_server.py\n"
+     ]
+    }
+   ],
    "source": [
     "server_code = r'''\n",
     "from mcp.server.fastmcp import FastMCP\n",
@@ -114,7 +132,16 @@
      "title": ""
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tools: ['add']\nadd(2, 3) => [TextContent(type='text', text='5', annotations=None, meta=None)]\n"
+     ]
+    }
+   ],
    "source": [
     "import os, sys\n",
     "from mcp import ClientSession, StdioServerParameters\n",
@@ -169,7 +196,16 @@
      "title": ""
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wrote /tmp/server.py\n"
+     ]
+    }
+   ],
    "source": [
     "server_code = r'''\n",
     "from mcp.server.fastmcp import FastMCP\n",
@@ -221,7 +257,16 @@
      "title": ""
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tools: ['greet']\nResult: [TextContent(type='text', text='Hello, Databricks! Nice to meet you.', annotations=None, meta=None)]\n"
+     ]
+    }
+   ],
    "source": [
     "import os, sys\n",
     "from mcp import ClientSession, StdioServerParameters\n",
@@ -260,7 +305,16 @@
      "title": ""
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wrote /tmp/server_http.py\n"
+     ]
+    }
+   ],
    "source": [
     "server_code = r'''\n",
     "from fastmcp import FastMCP\n",
@@ -296,7 +350,16 @@
      "title": ""
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "server pid: 3839054\n"
+     ]
+    }
+   ],
    "source": [
     "import subprocess, sys\n",
     "proc = subprocess.Popen([sys.executable, \"/tmp/server_http.py\"])\n",
@@ -319,7 +382,19 @@
      "title": ""
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "proc.terminate()\n",
     "proc.wait()"
