Update Goal Setting Notebook

--- a/agentic_design/05_goal_setting.ipynb
+++ b/agentic_design/05_goal_setting.ipynb
@@ -16,7 +16,16 @@
      "title": ""
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001B[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\ngoogle-api-core 2.18.0 requires protobuf!=3.20.0,!=3.20.1,!=4.21.0,!=4.21.1,!=4.21.2,!=4.21.3,!=4.21.4,!=4.21.5,<5.0.0.dev0,>=3.19.5, but you have protobuf 5.29.5 which is incompatible.\u001B[0m\u001B[31m\n\u001B[0m\u001B[43mNote: you may need to restart the kernel using %restart_python or dbutils.library.restartPython() to use updated packages.\u001B[0m\n"
+     ]
+    }
+   ],
    "source": [
     "%pip install -U -q databricks-langchain langchain==0.3.7 faiss-cpu wikipedia langgraph==0.5.3  databricks_langchain transformers accelerate torch"
    ]
@@ -135,7 +144,129 @@
      "title": ""
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "display_data",
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ad5ad33ee67a4baba829c2bcad8b4aee",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "tokenizer_config.json: 0.00B [00:00, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "02acc1b1e98d4846bc0f486540a88386",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "vocab.json: 0.00B [00:00, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8501e49db5464bf6a1d5ad0fe69a4a14",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "merges.txt: 0.00B [00:00, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c636a2df4b154ca3b9693e4d50db5aa7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "tokenizer.json: 0.00B [00:00, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "980be4347eaf4ec1acba2279d6d0a20f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "config.json:   0%|          | 0.00/659 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "`torch_dtype` is deprecated! Use `dtype` instead!\n"
+     ]
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1e016e718de14d33b19c08edccf23c78",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model.safetensors:   0%|          | 0.00/988M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "02402846ccf14b288a21fa8b44a27b69",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "generation_config.json:   0%|          | 0.00/242 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Device set to use cpu\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "from transformers import AutoTokenizer, AutoModelForCausalLM, pipeline\n",
@@ -459,7 +590,16 @@
      "title": ""
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved to: /tmp/mcp_code_agent/write_code_7058.py\nSaved to: None\n"
+     ]
+    }
+   ],
    "source": [
     "use_case_input = \"Write code to find BinaryGap of a given positive integer\"\n",
     "goals_input = \"Code simple to understand, Functionally correct, Handles comprehensive edge cases, Takes positive integer input only, prints the results with few examples\"\n",
@@ -484,7 +624,19 @@
      "title": ""
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "['write_code_7058.py']"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import os\n",
     "os.listdir(\"/tmp/mcp_code_agent\")"
@@ -506,7 +658,16 @@
      "title": ""
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# This Python program implements the following use case:\n# Write code to find BinaryGap of a given positive integer\n\ndef binary_gap(n):\n    \"\"\"\n    Calculate the length of the longest sequence of consecutive zeros that \n    appears at the beginning of the binary representation of n.\n    \n    Parameters:\n    n (int): A positive integer\n    \n    Returns:\n    int: The length of the longest binary gap.\n    \"\"\"\n    max_gap = 0\n    current_gap = 0\n    \n    while n > 0:\n        if n % 2 == 1:\n            current_gap += 1\n        else:\n            max_gap = max(max_gap, current_gap)\n            current_gap = 0\n        \n        n //= 2\n    \n    return max_gap\n\n# Example usage and verification\nprint(binary_gap(8))       # Output: 3\nprint(binary_gap(79))      # Output: 4\nprint(binary_gap(80))      # Output: 2\nprint(binary_gap(15))      # Output: 0\n```\n\nThis solution iterates through each bit of the given number `n`, calculates the binary representation, and counts consecutive zeros starting from the least significant bit. It keeps track of the maximum gap found during this process.\n"
+     ]
+    }
+   ],
    "source": [
     "path = \"/tmp/mcp_code_agent/write_code_7058.py\"\n",
     "\n",
